Prevent invisible name changes
Prevent invisible name changes. I knew this would happen >:-(

--- a/style/stylesheets/betterttv-dark.css
+++ b/style/stylesheets/betterttv-dark.css
@@ -72,7 +72,7 @@ body {
 }
 
 #dash_main .button.drop:after, .ember-application .button.drop:after {
-	border-color: rgba(2555,255,255,255.35);
+	border-color: rgba(255,255,255,0.35);
 	border-left-color: transparent;
 	border-right-color: transparent;
 	border-bottom-color: transparent;
